--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src", "tests"],
+  "include": ["src", "tests", "types"],
   "compilerOptions": {
     "baseUrl": ".",
     "esModuleInterop": true,
